# heron_desktop-release

./: CHANGELOG.rst  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
heron_desktop/: CHANGELOG.rst  CMakeLists.txt  package.xml
heron_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
heron_viz/launch/: view_model.launch  view_robot.launch
heron_viz/rviz/: robot.rviz
rpm/: ros-indigo-heron-desktop.spec  ros-indigo-heron-viz.spec  ros-kinetic-heron-desktop.spec  template.spec
