<?xml version="1.0"?>
<package>
  <name>heron_desktop</name>
  <version>0.0.3</version>
  <description>The heron_desktop metapackage</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/heron_desktop</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>heron_msgs</run_depend>
  <run_depend>heron_viz</run_depend>

  <export><metapackage/></export>
</package>
